try some things